# msbr

./: .gitignore  Cargo.toml  README.md
src/: analysis.rs  canvas.rs  main.rs  pipeline.rs  stroke.rs
